# ShadowsocksR-Android

./: .gitignore  .travis.yml  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/acl/: HMBSbige-whitelist.acl  bypass-china.acl  bypass-lan-china.acl  bypass-lan.acl  china-list.acl
app/src/main/assets/armeabi-v7a/: redsocks  tun2socks
app/src/main/assets/pages/: about.html
app/src/main/assets/x86/: ss-local  tun2socks
app/src/main/cpp/: system.cpp
app/src/main/cpp/ancillary/: ancillary.h  fd_recv.c  fd_send.c
app/src/main/cpp/cpufeatures/: cpu-features.c  cpu-features.h
app/src/main/res/drawable/: background_stat.xml  ic_arrow_drop_down.xml  ic_click.xml  ic_click_white.xml  ic_content_add.xml  ic_content_copy.xml  ic_content_create.xml  ic_content_paste.xml  ic_device_nfc.xml  ic_down.xml  ic_http.xml  ic_image_camera_alt.xml  ic_rss.xml  ic_social_share.xml  ic_start_busy.xml  ic_start_connected.xml  ic_start_idle.xml  ic_tcp.xml
app/src/main/res/drawable-anydpi-v21/: ic_qu_shadowsocks_launcher.xml  ic_qu_shadowsocks_launcher_disabled.xml
app/src/main/res/drawable-v21/: background_stat.xml
app/src/main/res/layout/: layout_apps.xml  layout_apps_item.xml  layout_edittext.xml  layout_front_proxy.xml  layout_main.xml  layout_main_stat_title.xml  layout_profiles.xml  layout_profiles_item.xml  layout_quick_switch.xml  layout_scanner.xml  layout_ssr_sub.xml  layout_ssr_sub_item.xml  (+2 more)
app/src/main/res/layout-w400dp/: layout_main_stat_title.xml
(+193 files in other folders)
